dans Accueil section Instructions : correction padding-left version tablette et desktop

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -78,23 +78,25 @@
         padding: 50px 0 70px;
         background-color: $white;
 
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
+        // permet de centrer l'ensemble des éléments enfants
+        // display: flex;
+        // justify-content: center;
+        // flex-direction: column;
+        // align-items: center;
 
         @media screen and (min-width: 992px) {
             max-width: 1440px;
             padding: 60px 0 40px;
-            align-items: stretch;
+            // align-items: stretch;
         }
     }
 
     &__title {
-        align-self: flex-start;
+        // align-self: flex-start;
         
         @media screen and (min-width: 992px) {
-            align-self: center;
+            // align-self: center;
+            text-align: center;
             font-size: 1.8rem;
         }
     }
@@ -105,7 +107,6 @@
         flex-direction: column;
         justify-content: center;
         // align-items: center;
-        
 
         padding-left: 13px;
 
@@ -114,13 +115,14 @@
             flex-wrap: wrap;
             gap: 5%;
             margin-top: 50px;
+            padding-left: 0;
         }
     }
 
 }
 
 .instruction {
-    // width: 325px;
+    max-width: 324px;
     background-color: $lightgrey;
     border-radius: 25px;
     margin-bottom: 20px;
@@ -133,7 +135,7 @@
     box-shadow : 2px 4px 14px rgba(0, 0, 0, 0.15);
 
     @media screen and (min-width: 768px) {
-        width: 325px;
+        width: 324px;
         margin-bottom: 4%;
     }
 
